overflow bug on mobile-testing

--- a/site/src/Css/App.css
+++ b/site/src/Css/App.css
@@ -159,6 +159,7 @@ html {
   height: 100%;
   scroll-behavior: smooth;
   scrollbar-width: thin;
+  overflow-x: hidden;
 }
 
 * {
