--- a/site/src/Sass/base/_base.scss
+++ b/site/src/Sass/base/_base.scss
@@ -9,6 +9,7 @@ html {
   height: 100%;
   scroll-behavior: smooth;
   scrollbar-width: thin;
+  overflow-x: hidden;
 }
 * {
   scrollbar-color: var(--clr-pink) var(--clr-gray--very-dark);
